--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Personalize your website info here
-title:            Anew Guy
+title:            Fostean
 tagline:          'Professional Website for Anew Guy'
-description:      'Website and Blog for Anew Guy'
+description:      'Website and Blog for fostean'
 url:              http://anewguy.github.io
 author:
-  name:           'Anew Guy'
-  url:            https://twitter.com/anewguy
+  name:           'fostean'
+  url:            https://twitter.com/neurosciequity
 
 ## You don't need to modify below this line
 paginate:         5
